<resources>
    <string name="app_name">Sistem Informasi Desa Cibentang</string>
    <string name="beranda">Beranda</string>
    <string name="lembaga">Lembaga</string>
    <string name="profil_desa">Profil Desa</string>
    <string name="dana_desa">Dana Desa</string>
    <string name="pencarian_berita">Pencarian berita</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="bimbingan_teknis_pelatihan_website_desa">Bimbingan Teknis Pelatihan Website Desa</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="jum_at_26_mei_2023">Jum\'at, 26 Mei 2023</string>
    <string name="baca_sekarang">Baca sekarang</string>
    <string name="berita_desa">Berita Desa</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="pembangunan_desa_harus_bersinergi_dengan_vis_kuningan_maju">Pembangunan Desa Harus Bersinergi Dengan Visi Kuningan Maju</string>
    <string name="agenda_desa">Agenda Desa</string>
    <string name="pengobatan_gratis">Pengobatan Gratis</string>
    <string name="jum_at_26_mei_2023_pukul_09_30_sd_11_30">Jum’at, 26 Mei 2023, pukul 09.30 sd 11.30</string>
    <string name="sabtu_27_mei_2023_pukul_19_30_sd_22_00">Sabtu, 27 Mei 2023, pukul 19.30 sd 22.00</string>
    <string name="maulid_nabi_muhammad_saw">Maulid Nabi Muhammad SAW</string>
    <string name="pertandingan_persahabatan_sepak_bola">Pertandingan Persahabatan Sepak Bola</string>
    <string name="sabtu_27_mei_2023_pukul_08_00_sd_12_00">Sabtu, 27 Mei 2023, pukul 08.00 sd 12.00</string>
    <string name="minggu_29_mei_2023">Minggu, 29 Mei 2023</string>
    <string name="lihat_galeri_desa_lainnya">Lihat galeri desa lainnya</string>
    <string name="galeri_desa">Galeri Desa</string>
    <string name="riwayat_pengaduan">Riwayat pengaduan</string>
    <string name="masukan_no_nik_anda">Masukan no NIK anda</string>
    <string name="masukan_catatan_pengaduan_anda">Masukan catatan pengaduan anda</string>
    <string name="kirim_pengaduan">Kirim pengaduan</string>
    <string name="nik">NIK</string>
    <string name="rabu_21_juni_2023">Rabu, 21 Juni 2023</string>
    <string name="laporan_pengaduan">Laporan pengaduan</string>
    <string name="tanggal">Tanggal</string>
    <string name="bagikan_berita">Bagikan berita</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_accusantium_laborum_in_inventore_libero_quam_deleniti_ad_quibusdam_illum_repellendus_sed_voluptatibus_autem_provident_facere_molestiae_cum_dolorem_nulla_veritatis_consequuntur_dicta_unde_officia_cumque_reiciendis_dolorum_totam_sapiente_animi_quaerat_veritatis_dignissimos_consequuntur_temporibus_magnam_impedit_similique_quaerat_quasi_ullam_facilis_eveniet_non_rerum_quod_accusamus_doloremque_fugit_voluptas_labore_sed_harum_corrupti_vitae_hic_debitis_minima_voluptates_aut_quam_temporibus_ipsa_culpa_delectus">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium laborum in inventore libero quam. Deleniti, ad quibusdam illum repellendus, sed voluptatibus autem provident facere molestiae cum dolorem, nulla veritatis consequuntur dicta unde officia cumque reiciendis? Dolorum totam sapiente animi quaerat veritatis dignissimos consequuntur temporibus magnam impedit similique. Quaerat, quasi. Ullam facilis eveniet non rerum quod accusamus. Doloremque fugit voluptas, labore sed harum corrupti vitae hic debitis minima voluptates aut quam temporibus ipsa culpa delectus.</string>
    <string name="ratione_aliquid_quod_aperiam_laudantium_atque_rem_ab_facilis_praesentium_nulla_ipsam_quos_at_sint_hic_corporis_maxime_debitis_excepturi_reprehenderit_molestias_facere_quaerat_veritatis_fugiat_nisi_voluptate_deserunt_perspiciatis_dolores_inventore_possimus_eum_odit_ex_placeat_harum_nostrum_facere_dolor_libero_recusandae_repudiandae_sed_sint_asperiores_cum_corporis_impedit_at_soluta_autem_laborum_labore_dolore_perspiciatis_corrupti_mollitia_optio_repellat_maxime_quisquam_harum_non_similique_perspiciatis_sapiente_odit_blanditiis_officiis_quidem_ratione_ipsa_enim_id_vel_sed_error_quos_veritatis_ipsam_blanditiis_dolore_ab_tempore_atque_cupiditate_labore_quaerat_distinctio_perferendis_perspiciatis_veniam_omnis_asperiores_sunt_veritatis_culpa_consequuntur_deserunt">Ratione aliquid quod aperiam laudantium atque! Rem ab facilis praesentium nulla ipsam quos at sint hic, corporis maxime debitis excepturi. Reprehenderit molestias facere quaerat veritatis fugiat. Nisi voluptate deserunt perspiciatis? Dolores inventore possimus eum odit ex placeat harum nostrum facere, dolor libero recusandae. Repudiandae sed sint asperiores cum corporis impedit at soluta, autem laborum labore! Dolore perspiciatis corrupti mollitia optio, repellat maxime quisquam harum non? Similique perspiciatis sapiente odit. Blanditiis officiis quidem ratione, ipsa enim id vel sed? Error quos veritatis, ipsam blanditiis dolore ab? Tempore atque cupiditate labore quaerat distinctio perferendis perspiciatis veniam omnis asperiores, sunt veritatis, culpa consequuntur deserunt</string>
    <string name="molestiae_ullam_vel_autem_enim_at_alias_iure_perferendis_tenetur_eius_possimus_minima_laboriosam_omnis_qui_ipsum_quae_modi_laborum_nam_cumque_voluptate_quod_ut_placeat_officia_sequi_magnam_laboriosam_voluptate_molestiae_reprehenderit_eaque_explicabo_cum_ea_nulla_voluptates_tempore_totam_magni_ducimus_adipisci_illo_molestiae_et_odio_a_debitis_numquam_eveniet_quia_beatae_ut_quos_cum_nihil_nulla_alias_ea_culpa_omnis_nisi_facere_fugiat_aspernatur_at_similique_a_quidem_aperiam_labore_cupiditate_quis_eaque_nesciunt_repudiandae_magnam_ipsam_facilis_totam_iure_facere_aliquam_velit_corporis_enim_modi_iste_nihil_soluta_debitis_quibusdam_culpa_error_rem_illum_mollitia_provident_incidunt_molestias_maxime_voluptatibus_quisquam_sed_et_in_corporis_error_aliquam_odio_saepe_laboriosam_quidem_accusamus_nemo_nulla_quasi_quisquam_maxime_inventore_consequuntur_perspiciatis_cum">Molestiae ullam vel autem enim at. Alias iure perferendis tenetur eius possimus minima laboriosam omnis qui ipsum quae modi laborum nam cumque voluptate quod ut placeat, officia sequi magnam? Laboriosam voluptate molestiae reprehenderit eaque. Explicabo cum ea nulla, voluptates tempore totam magni ducimus. Adipisci illo molestiae et odio, a debitis. Numquam eveniet quia beatae, ut quos cum nihil nulla. Alias ea culpa omnis nisi facere fugiat, aspernatur at similique a? Quidem aperiam labore cupiditate quis eaque nesciunt repudiandae magnam ipsam facilis totam, iure facere aliquam velit corporis enim, modi iste, nihil soluta debitis quibusdam culpa error rem illum mollitia! Provident incidunt, molestias maxime voluptatibus quisquam sed et in corporis error aliquam! Odio saepe laboriosam, quidem, accusamus nemo nulla quasi quisquam maxime inventore, consequuntur perspiciatis cum.</string>
    <string name="pemerintah_kabupaten_kuningan_melalui_rumah_sakit_umum_terus_mengencarkan_pengobatan_gratis_untuk_masyarakat_di_desa_desa_kali_ini_pengobatan_gratis_dilaksanakan_di_balai_desa_cibentang_yang_akan_dilaksanakan_pada_hari_sabtu_27_mei_2023">Pemerintah Kabupaten Kuningan melalui Rumah Sakit Umum, terus mengencarkan pengobatan gratis untuk masyarakat di desa-desa. Kali ini pengobatan gratis dilaksanakan di Balai Desa Cibentang, yang akan dilaksanakan pada hari Sabtu, 27 Mei 2023.</string>
    <string name="u2022_tempat_balai_desa_cibentang_n_u2022_tanggal_dan_waktu_sabtu_27_mei_2023_n_u2022_keterangan_tidak_dipungut_biaya">• Tempat : Balai Desa Cibentang\n• Tanggal dan waktu : Sabtu, 27 Mei 2023\n• keterangan : Tidak dipungut biaya</string>
    <string name="rapat_pemilihan_pembentukan_panitia_pembangunan_masjid">Rapat Pemilihan Pembentukan Panitia Pembangunan Masjid</string>
    <string name="kode_rek">KODE REK</string>
    <string name="uraian">URAIAN</string>
    <string name="anggaran">ANGGARAN</string>
    <string name="_4">4.</string>
    <string name="pendapatan">Pendapatan</string>
    <string name="_5">5.</string>
    <string name="_5_1">5.1.</string>
    <string name="_5_2">5.2.</string>
    <string name="_5_3">5.3.</string>
    <string name="_5_4">5.4.</string>
    <string name="belanja_pegawai">Belanja pegawai</string>
    <string name="belanja_barang_amp_jasa"><![CDATA[Belanja barang & jasa]]></string>
    <string name="belanja_modal">Belanja modal</string>
    <string name="belanja_tidak_terduga">Belanja tidak terduga</string>
    <string name="_439_594_800_00">439.594.800,00</string>
    <string name="_450_629_200_00">450.629.200,00</string>
    <string name="_455_557_000_00">455.557.000,00</string>
    <string name="_79_851_606_82">79.851.606,82</string>
    <string name="jumlah_belanja">Jumlah belanja</string>
    <string name="_1_425_632_606_82">1.425.632.606,82</string>
    <string name="surplus_defisit">Surplus/defisit</string>
    <string name="_573_098_82">(573.098,82)</string>
    <string name="_6">6.</string>
    <string name="meningkatkan_pembangunan_infrastruktur_yang_mendukung_perekonomian_desa_seperti_jalan_jembatan_pasar_desa_objek_wisata_serta_infrastruktur_strategis_lainnya">Meningkatkan pembangunan infrastruktur yang mendukung perekonomian desa, seperti jalan, jembatan, Pasar Desa, objek wisata serta infrastruktur strategis lainnya.</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="meningkatkan_pembangunan_dibidang_kesehatan_untuk_mendorong_derajat_kesehatan_masyarakat_agar_dapat_bekerja_lebih_optimal_dan_memiliki_harapan_hidup_yang_lebih_panjang">Meningkatkan pembangunan dibidang kesehatan untuk mendorong derajat kesehatan masyarakat agar dapat bekerja lebih optimal dan memiliki harapan hidup yang lebih panjang.</string>
    <string name="_3">3.</string>
    <string name="meningkatkan_pembangunan_di_bidang_keagaman_untuk_mendorong_dan_mendukung_kegiatan_masyarakat_agar_lebih_optimal_dalam_beribadah">Meningkatkan pembangunan di bidang keagaman untuk mendorong dan mendukung kegiatan masyarakat agar lebih optimal dalam beribadah.</string>
    <string name="meningkatkan_pembangunan_di_bidang_pendidikan_untuk_mendorong_peningkatan_kualitas_sumber_daya_manusia_agar_memiliki_kecerdasan_dan_daya_saing_yang_lebih_baik">Meningkatkan pembangunan di bidang pendidikan untuk mendorong peningkatan kualitas sumber daya manusia agar memiliki kecerdasan dan daya saing yang lebih baik.</string>
    <string name="meningkatkan_pembangunan_ekonomi_dengan_mendorong_semakin_tumbuh_dan_berkembangnya_pembangunan_di_bidang_pertanian_dalam_arti_luas_industri_perdagangan_dan_pariwisata">Meningkatkan pembangunan ekonomi dengan mendorong semakin tumbuh dan berkembangnya pembangunan di bidang pertanian dalam arti luas, industri, perdagangan dan pariwisata.</string>
    <string name="menciptakan_tata_kelola_pemerintahan_yang_baik_good_governance_berdasarkan_demokratisasi_transparansi_penegakan_hukum_berkeadilan_kesetaraan_gender_dan_mengutamakan_pelayanan_kepada_masyarakat">Menciptakan tata kelola pemerintahan yang baik (good governance) berdasarkan demokratisasi, transparansi, penegakan hukum, berkeadilan, kesetaraan gender dan mengutamakan pelayanan kepada masyarakat.</string>
    <string name="_7">7.</string>
    <string name="mengupayakan_pelestarian_sumber_daya_alam_untuk_memenuhi_kebutuhan_dan_pemerataan_pembangunan_guna_meningkatkan_perekonomian">Mengupayakan pelestarian sumber daya alam untuk memenuhi kebutuhan dan pemerataan pembangunan guna meningkatkan perekonomian.</string>
</resources>