<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="10dp">

    <GridLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_tabel_anggaran_desa"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/kode_rek"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_tabel_anggaran_desa"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/uraian"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_text_tabel_anggaran_desa"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/anggaran"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </GridLayout>

        <RelativeLayout
            android:id="@+id/relativ1"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/grid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="80dp"
                android:layout_height="170dp"
                android:background="@drawable/bg_text_tabel_anggaran_desa"
                android:orientation="vertical"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_5_1"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_5_2"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_5_3"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_5_4"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:paddingHorizontal="5dp"
                android:layout_toEndOf="@id/layout1"
                android:layout_width="145dp"
                android:layout_height="130dp"
                android:background="@drawable/bg_text_tabel_anggaran_desa"
                android:orientation="vertical"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/pendapatan"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/belanja_pegawai"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/belanja_barang_amp_jasa"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/belanja_modal"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/belanja_tidak_terduga"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_toEndOf="@id/layout2"
                android:layout_width="110dp"
                android:layout_height="130dp"
                android:paddingHorizontal="5dp"
                android:background="@drawable/bg_text_tabel_anggaran_desa"
                android:orientation="vertical"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_439_594_800_00"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_450_629_200_00"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_455_557_000_00"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_79_851_606_82"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout4"
                android:paddingHorizontal="5dp"
                android:background="@drawable/bg_text_tabel_anggaran_desa"
                android:orientation="horizontal"
                android:layout_below="@id/layout2"
                android:layout_toEndOf="@id/layout1"
                android:layout_width="255dp"
                android:layout_height="40dp">

                <TextView
                    android:textSize="13sp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/jumlah_belanja"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginStart="10dp"
                    android:textSize="13sp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/_1_425_632_606_82"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout5"
                android:paddingHorizontal="5dp"
                android:background="@drawable/bg_text_tabel_anggaran_desa"
                android:orientation="horizontal"
                android:layout_below="@id/layout4"
                android:layout_width="335dp"
                android:layout_height="40dp">

                <TextView
                    android:textSize="13sp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/surplus_defisit"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginStart="10dp"
                    android:textSize="13sp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/black"
                    android:text="@string/_573_098_82"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </RelativeLayout>





</RelativeLayout>